--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-permissions:
+prmissions:
   contents: write
 
 name: Build obsidian plugin
@@ -16,4 +16,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ophidian-lib/build@v1
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
